.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
19:52:17 **** Incremental Build of configuration Debug for project Constructor and Destructors ****
make all 
Building file: ../src/Cat.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Cat.d" -MT"src/Cat.d" -o "src/Cat.o" "../src/Cat.cpp"
Finished building: ../src/Cat.cpp
 
Building file: ../src/Constructor and Destructors.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Constructor and Destructors.d" -MT"src/Constructor\ and\ Destructors.d" -o "src/Constructor and Destructors.o" "../src/Constructor and Destructors.cpp"
Finished building: ../src/Constructor and Destructors.cpp
 
Building target: Constructor and Destructors
Invoking: Cross G++ Linker
g++  -o "Constructor and Destructors"  ./src/Cat.o ./src/Constructor\ and\ Destructors.o   
Finished building target: Constructor and Destructors
 
19:52:21 **** Incremental Build of configuration Debug for project Constructor and Destructors ****
make all 
make: Nothing to be done for 'all'.
19:56:06 **** Build of configuration Debug for project Arithmetic ****
make all 
Building file: ../src/Arithmetic.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Arithmetic.d" -MT"src/Arithmetic.d" -o "src/Arithmetic.o" "../src/Arithmetic.cpp"
Finished building: ../src/Arithmetic.cpp
 
Building target: Arithmetic
Invoking: Cross G++ Linker
g++  -o "Arithmetic"  ./src/Arithmetic.o   
Finished building target: Arithmetic
 
19:56:12 **** Incremental Build of configuration Debug for project Arithmetic ****
make all 
Building file: ../src/Arithmetic.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Arithmetic.d" -MT"src/Arithmetic.d" -o "src/Arithmetic.o" "../src/Arithmetic.cpp"
Finished building: ../src/Arithmetic.cpp
 
Building target: Arithmetic
Invoking: Cross G++ Linker
g++  -o "Arithmetic"  ./src/Arithmetic.o   
Finished building target: Arithmetic
 
19:56:29 **** Incremental Build of configuration Debug for project Arithmetic ****
make all 
Building file: ../src/Arithmetic.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Arithmetic.d" -MT"src/Arithmetic.d" -o "src/Arithmetic.o" "../src/Arithmetic.cpp"
Finished building: ../src/Arithmetic.cpp
 
Building target: Arithmetic
Invoking: Cross G++ Linker
g++  -o "Arithmetic"  ./src/Arithmetic.o   
Finished building target: Arithmetic
 
19:57:43 **** Incremental Build of configuration Debug for project Arithmetic ****
make all 
Building file: ../src/Arithmetic.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Arithmetic.d" -MT"src/Arithmetic.d" -o "src/Arithmetic.o" "../src/Arithmetic.cpp"
Finished building: ../src/Arithmetic.cpp
 
Building target: Arithmetic
Invoking: Cross G++ Linker
g++  -o "Arithmetic"  ./src/Arithmetic.o   
Finished building target: Arithmetic
 
19:58:22 **** Incremental Build of configuration Debug for project Arithmetic ****
make all 
Building file: ../src/Arithmetic.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Arithmetic.d" -MT"src/Arithmetic.d" -o "src/Arithmetic.o" "../src/Arithmetic.cpp"
Finished building: ../src/Arithmetic.cpp
 
Building target: Arithmetic
Invoking: Cross G++ Linker
g++  -o "Arithmetic"  ./src/Arithmetic.o   
Finished building target: Arithmetic
 
19:58:58 **** Incremental Build of configuration Debug for project Arithmetic ****
make all 
Building file: ../src/Arithmetic.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Arithmetic.d" -MT"src/Arithmetic.d" -o "src/Arithmetic.o" "../src/Arithmetic.cpp"
Finished building: ../src/Arithmetic.cpp
 
Building target: Arithmetic
Invoking: Cross G++ Linker
g++  -o "Arithmetic"  ./src/Arithmetic.o   
Finished building target: Arithmetic
 
19:59:54 **** Incremental Build of configuration Debug for project Arithmetic ****
make all 
Building file: ../src/Arithmetic.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Arithmetic.d" -MT"src/Arithmetic.d" -o "src/Arithmetic.o" "../src/Arithmetic.cpp"
Finished building: ../src/Arithmetic.cpp
 
Building target: Arithmetic
Invoking: Cross G++ Linker
g++  -o "Arithmetic"  ./src/Arithmetic.o   
Finished building target: Arithmetic
 
20:01:20 **** Incremental Build of configuration Debug for project Arithmetic ****
make all 
Building file: ../src/Arithmetic.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Arithmetic.d" -MT"src/Arithmetic.d" -o "src/Arithmetic.o" "../src/Arithmetic.cpp"
Finished building: ../src/Arithmetic.cpp
 
Building target: Arithmetic
Invoking: Cross G++ Linker
g++  -o "Arithmetic"  ./src/Arithmetic.o   
Finished building target: Arithmetic
 
20:12:56 **** Incremental Build of configuration Debug for project Arithmetic ****
make all 
Building file: ../src/Arithmetic.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Arithmetic.d" -MT"src/Arithmetic.d" -o "src/Arithmetic.o" "../src/Arithmetic.cpp"
../src/Arithmetic.cpp: In function ‘int main()’:
../src/Arithmetic.cpp:44:33: error: invalid operands of types ‘double’ and ‘int’ to binary ‘operator%’
  double equation = ((5.3 / 4) % 2) + (2.3 * 6);
                                 ^
src/subdir.mk:18: recipe for target 'src/Arithmetic.o' failed
make: *** [src/Arithmetic.o] Error 1
20:14:36 **** Incremental Build of configuration Debug for project Arithmetic ****
make all 
Building file: ../src/Arithmetic.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Arithmetic.d" -MT"src/Arithmetic.d" -o "src/Arithmetic.o" "../src/Arithmetic.cpp"
Finished building: ../src/Arithmetic.cpp
 
Building target: Arithmetic
Invoking: Cross G++ Linker
g++  -o "Arithmetic"  ./src/Arithmetic.o   
Finished building target: Arithmetic
 
20:14:46 **** Incremental Build of configuration Debug for project Arithmetic ****
make all 
Building file: ../src/Arithmetic.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Arithmetic.d" -MT"src/Arithmetic.d" -o "src/Arithmetic.o" "../src/Arithmetic.cpp"
Finished building: ../src/Arithmetic.cpp
 
Building target: Arithmetic
Invoking: Cross G++ Linker
g++  -o "Arithmetic"  ./src/Arithmetic.o   
Finished building target: Arithmetic
 
20:14:53 **** Incremental Build of configuration Debug for project Arithmetic ****
make all 
Building file: ../src/Arithmetic.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Arithmetic.d" -MT"src/Arithmetic.d" -o "src/Arithmetic.o" "../src/Arithmetic.cpp"
Finished building: ../src/Arithmetic.cpp
 
Building target: Arithmetic
Invoking: Cross G++ Linker
g++  -o "Arithmetic"  ./src/Arithmetic.o   
Finished building target: Arithmetic
 
